<resources>
    <string name="app_name" translatable="false">Grbl Controller</string>
    <string name="shared_preference_key" translatable="false">in.co.gorest.grblcontroller.f635f2e523d7c64f5b4ad9179b689433</string>
    <string name="preference_use_tool_library" translatable="false">use_tool_library</string>
    <string name="preference_auto_connect" translatable="false">auto_connect</string>
    <string name="preference_start_up_string" translatable="false">start_up_string</string>
    <string name="preference_console_verbose_mode" translatable="false">console_verbose_mode</string>
    <string name="preference_jogging_step_size" translatable="false">jogging_step_size</string>
    <string name="preference_jogging_step_size_z" translatable="false">jogging_step_size_z</string>
    <string name="preference_jogging_feed_rate" translatable="false">jogging_feed_rate</string>
    <string name="preference_jogging_in_inches" translatable="false">jogging_in_inches</string>
    <string name="preference_jogging_max_step_size" translatable="false">jogging_max_step_size</string>
    <string name="preference_jogging_max_step_size_z" translatable="false">jogging_max_step_size_z</string>
    <string name="preference_jogging_max_feed_rate" translatable="false">jogging_max_feed_rate</string>
    <string name="preference_streaming_stop_button_behaviour" translatable="false">streaming_stop_button_behaviour</string>
    <string name="preference_last_connected_device" translatable="false">last_connected_device</string>
    <string name="preference_sleep_after_job" translatable="false">sleep_after_job</string>
    <string name="preference_probing_feed_rate" translatable="false">preference_probing_feed_rate</string>
    <string name="preference_probing_tool_diameter" translatable="false">probing_tool_diameter</string>
    <string name="preference_probing_touch_plate_x_offset" translatable="false">probing_touch_plate_x_offset</string>
    <string name="preference_probing_touch_plate_y_offset" translatable="false">probing_touch_plate_y_offset</string>
    <string name="preference_probing_touch_distance_xy" translatable="false">probing_touch_distance_xy</string>
    <string name="preference_probing_touch_depth_xy" translatable="false">probing_touch_depth_xy</string>
    <string name="preference_probing_plate_thickness" translatable="false">probing_plate_thickness</string>
    <string name="preference_probing_distance" translatable="false">probing_distance</string>
    <string name="preference_keep_screen_on" translatable="false">preference_keep_screen_on</string>
    <string name="preference_enable_custom_buttons" translatable="false">enable_custom_buttons</string>
    <string name="preference_custom_button_one" translatable="false">custom_button_one</string>
    <string name="preference_custom_button_one_long_click" translatable="false">custom_button_one_long_click</string>
    <string name="preference_custom_button_one_short_click" translatable="false">custom_button_one_short_click</string>
    <string name="preference_custom_button_one_confirm" translatable="false">custom_button_one_confirm</string>
    <string name="preference_custom_button_two" translatable="false">custom_button_two</string>
    <string name="preference_custom_button_two_short_click" translatable="false">custom_button_two_short_click</string>
    <string name="preference_custom_button_two_long_click" translatable="false">custom_button_two_long_click</string>
    <string name="preference_custom_button_two_confirm" translatable="false">custom_button_two_confirm</string>
    <string name="preference_custom_button_three" translatable="false">custom_button_three</string>
    <string name="preference_custom_button_three_short_click" translatable="false">custom_button_three_short_click</string>
    <string name="preference_custom_button_three_long_click" translatable="false">custom_button_three_long_click</string>
    <string name="preference_custom_button_three_confirm" translatable="false">custom_button_three_confirm</string>
    <string name="preference_custom_button_four" translatable="false">custom_button_four</string>
    <string name="preference_custom_button_four_short_click" translatable="false">custom_button_four_short_click</string>
    <string name="preference_custom_button_four_long_click" translatable="false">custom_button_four_long_click</string>
    <string name="preference_custom_button_four_confirm" translatable="false">custom_button_four_confirm</string>
    <string name="preference_default_serial_connection_type" translatable="false">default_serial_connection_type</string>
    <string name="preference_check_machine_position_before_job" translatable="false">check_machine_position_before_job</string>
    <string name="preference_enable_haptic_feedback" translatable="false">enable_haptic_feedback</string>
    <string name="preference_xy_jog_pad_rotation" translatable="false">xy_jog_pad_rotation</string>
    <string name="preference_confirm_grbl_soft_reset" translatable="false">confirm_grbl_soft_reset</string>
    <string name="preference_gcode_file_picker_type" translatable="false">gcode_file_picker_type</string>
    <string name="preference_enable_additional_axis" translatable="false">enable_additional_axis</string>
    <string name="preference_jog_xy_step_small" translatable="false">preference_jog_xy_step_small</string>
    <string name="preference_jog_xy_step_medium" translatable="false">preference_jog_xy_step_medium</string>
    <string name="preference_jog_xy_step_high" translatable="false">preference_jog_xy_step_high</string>
    <string name="preference_jog_z_step_small" translatable="false">preference_jog_z_step_small</string>
    <string name="preference_jog_z_step_medium" translatable="false">preference_jog_z_step_medium</string>
    <string name="preference_jog_z_step_high" translatable="false">preference_jog_z_step_high</string>
    <string name="firebase_cloud_messaging_token" translatable="false">firebase_cloud_messaging_token</string>
    <string name="firebase_cloud_messaging_token_sent" translatable="false">firebase_cloud_messaging_token_sent</string>
    <string name="default_notification_channel_id" translatable="false">General</string>
    <string name="default_storage_type" translatable="false">default_storage_type</string>
    <string translatable="false" name="preference_ignore_error_20">preference_ignore_error_20</string>
    <string translatable="false" name="preference_update_pool_interval">preference_update_pool_interval</string>
    <string name="usb_serial_baud_rate" translatable="false">usb_serial_baud_rate</string>
    <string name="preference_remember_last_file_location" translatable="false">remember_last_file_location</string>
    <string name="most_recent_selected_file" translatable="false">most_recent_selected_file</string>
    <string name="preference_single_step_mode" translatable="false">preference_single_step_mode</string>
    <string name="text_yes_confirm">Yes</string>
    <string name="text_no_confirm">No</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_reset">Reset</string>
    <string name="text_connect">Connect</string>
    <string name="text_grbl_unsupported">Only grbl version %s or above is supported</string>
    <string name="text_app_rating_summary">If you like Grbl Controller, you can show your appreciation here.</string>
    <string name="text_app_rating">Rate Application</string>
    <string name="text_bluetooth_adapter_error">Bluetooth Adapter Error, please restart your phone</string>
    <string name="text_unable_to_connect_to_device">Unable to connect to device</string>
    <string name="text_device_connection_was_lost">Device connection was lost</string>
    <string name="text_unknown_error">Unknown error: please restart the application</string>
    <string name="text_no_bluetooth_permission">Unable to start bluetooth, please check permissions</string>
    <string name="text_bluetooth_adaptor_error">Bluetooth adapter error!</string>
    <string name="text_no_paired_devices">No paired devices</string>
    <string name="text_select_paired_device">Select Paired Device</string>
    <string name="text_none_found">None Found</string>
    <string name="text_not_connected">Not connected</string>
    <string name="text_application_settings">Application Settings</string>
    <string name="text_no_bluetooth_adapter">No Bluetooth Adapter Found!</string>
    <string name="text_connected_to">Connected to </string>
    <string name="text_connected">Connected</string>
    <string name="text_connecting">Connecting&#8230;.</string>
    <string name="text_connection_lost">Connection lost</string>
    <string name="text_disconnect">Disconnect!</string>
    <string name="text_disconnect_confirm">do you really want to disconnect?</string>
    <string name="text_bt_service_not_running">Bluetooth service not running!</string>
    <string name="text_bt_not_enabled">Bluetooth is not enabled!</string>
    <string name="text_grbl_soft_reset">Grbl soft reset!</string>
    <string name="text_grbl_soft_reset_desc">do you want to soft reset the machine?</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_buy_app">Upgrade to Grbl Controller +</string>
    <string name="text_buy_app_summary">support development | get more features</string>
    <string name="text_app_share">Share</string>
    <string name="text_app_about">About</string>
    <string name="text_settings">Settings</string>
    <string name="text_custom_action">Custom action</string>
    <string name="text_send_custom_command">send custom commands for the action</string>
    <string name="text_auto_connect">Auto connect</string>
    <string name="text_auto_connect_desc">connect to last used bluetooth device on application start</string>
    <string name="text_soft_reset_confirm">Soft reset confirmation</string>
    <string name="text_soft_reset_confirm_desc">ask for confirmation before doing soft reset</string>
    <string name="text_sleep_after_job">Sleep after job</string>
    <string name="text_sleep_after_job_desc">put machine into a de-powered sleep mode using $SLP command</string>
    <string name="text_jogging_max_steps">Jogging max step size for XY</string>
    <string name="text_jogging_max_steps_z">Jogging max step size for Z</string>
    <string name="text_jogging_max_steps_desc">seek bar maximum value for axis X and Y</string>
    <string name="text_jogging_max_steps_desc_z">seek bar maximum value for Z axis</string>
    <string name="text_keep_screen_on">Stay awake</string>
    <string name="text_probing_x_location">X probing location</string>
    <string name="text_probing_x_location_left">left</string>
    <string name="text_probing_x_location_none">none</string>
    <string name="text_probing_x_location_right">right</string>
    <string name="text_probing_y_location">Y probing location</string>
    <string name="text_probing_y_location_back">back</string>
    <string name="text_probing_y_location_none">none</string>
    <string name="text_probing_y_location_front">front</string>
    <string name="text_probing_probe_z">Probe Z</string>
    <string name="text_probing_tlo_probe_reference">probe reference</string>
    <string name="text_probing_center">Probe center</string>
    <string name="text_probing_center_probe_from">Probe from</string>
    <string name="text_probing_center_inside">Inside</string>
    <string name="text_probing_center_outside">Outside</string>
    <string name="text_probing_center_apply">Apply</string>
    <string name="text_dynamic_tool_length_offset">G43.1: Dynamic Tool Length Offset</string>
    <string name="text_probing_tab_heading">Probing | Tool length offset {fa-info-circle 16dp @color/colorAccent}</string>
    <string name="text_last_probe_position">Last probe position</string>
    <string name="text_current_tlo">Current TLO</string>
    <string name="probe_plus_tlo">probe and set TLO</string>
</resources>