<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="machineStatus"
            type="in.co.gorest.grblcontroller.listeners.MachineStatusListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/probing_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="48dp"
            android:padding="4dp"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/text_probing_tab_heading"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="G38.3 | G43.1"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:layout_margin="4dp"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:id="@+id/probing_x_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:minHeight="48dp"
            android:padding="4dp"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/probe_x_location"
                android:text="@string/text_probing_x_location" />

            <RadioGroup
                android:id="@+id/probe_x_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/probe_x_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_probing_x_location_left" />

                <RadioButton
                    android:id="@+id/probe_x_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_probing_x_location_none" />

                <RadioButton
                    android:id="@+id/probe_x_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_probing_x_location_right" />

            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/probing_y_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:minHeight="48dp"
            android:padding="4dp"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/probe_y_location"
                android:text="@string/text_probing_y_location" />

            <RadioGroup
                android:id="@+id/probe_y_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/probe_y_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_probing_y_location_back" />

                <RadioButton
                    android:id="@+id/probe_y_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_probing_y_location_none" />

                <RadioButton
                    android:id="@+id/probe_y_front"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_probing_y_location_front" />

            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/probe_z_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:minHeight="48dp"
            android:padding="4dp"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/probe_z"
                android:text="@string/text_probing_probe_z" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/probe_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/auto_zero_after_probe"
                android:text="@string/text_auto_zero_z_axis_after_probe" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/auto_zero_after_probe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:layout_margin="4dp"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="4dp">

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/start_probe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{machineStatus.state.equals(machineStatus.STATE_IDLE)}"
                android:text="@string/text_start_probe" />

        </RelativeLayout>
    </LinearLayout>
</layout>